--- a/404.html
+++ b/404.html
@@ -5,20 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <title>Page not found &middot; The Butler</title>
-    <meta name="description" content="A ready to use static blog, powered by Cecil." />
-    <meta name="keywords" content="Cecil, Static Site Generator, SSG" />
+    <title>Page not found &middot; -- inDeep</title>
+    <meta name="description" content="Random science, thoughts and coding" />
     <meta name="author" content="Arnaud Ligny" />
     <meta name="robots" content="index,follow" />
-    <link rel="canonical" type="text/html" title="Page not found &middot; The Butler" href="/404.html" />
+    <link rel="canonical" type="text/html" title="Page not found &middot; -- inDeep" href="/404.html" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:site_name" content="The Butler" />
+    <meta property="og:site_name" content="-- inDeep" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Page not found &middot; The Butler" />
-    <meta property="og:description" content="A ready to use static blog, powered by Cecil." />
+    <meta property="og:title" content="Page not found &middot; -- inDeep" />
+    <meta property="og:description" content="Random science, thoughts and coding" />
     <meta property="og:url" content="/404.html" />
-    <meta name="twitter:title" content="Page not found &middot; The Butler" />
-    <meta name="twitter:description" content="A ready to use static blog, powered by Cecil." />
+    <meta name="twitter:title" content="Page not found &middot; -- inDeep" />
+    <meta name="twitter:description" content="Random science, thoughts and coding" />
     <meta name="twitter:card" content="summary" />
 
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-touch-icon-144-precomposed.62a368372094d2c7d6c28ac29ff6f2c2.png">
@@ -39,9 +38,9 @@
       <div class="container sidebar-sticky">
         <div class="sidebar-about">
           <h1>
-            <a href="/">The Butler</a>
+            <a href="/">-- inDeep</a>
           </h1>
-          <p class="lead">A ready to use static blog, powered by Cecil.</p>
+          <p class="lead">Random science, thoughts and coding</p>
         </div>
         <nav class="sidebar-nav">
           <a class="sidebar-nav-item item-weight-0" href="/">Home</a>
