--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="lastposts">
         <h2>Recent posts</h2>
         <ul>
-          <li><a href="/blog/doom/">Doom</a></li>
+          <li><a href="/blog/doom/">doom</a></li>
           <li><a href="/blog/daft-punk/">daft-punk</a></li>
         </ul>
       </div>
